# Mobility_Control_Tower

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  quality.yml
airflow/: README.md
airflow/dags/: daily_platform_maintenance.py  daily_static_pipeline.py  mct_airflow_utils.py  realtime_collection.py  realtime_incremental_refresh.py
config/: sources.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: read_silver_csv.sql  tests.sql
dbt/tests/: assert_active_routes_not_greater_than_source.sql  assert_active_stops_not_greater_than_source.sql  assert_delay_percentile_ordering.sql  assert_delay_reasonable.sql  assert_ewt_absent_when_ineligible.sql  assert_headway_events_exclusive.sql  assert_headways_positive.sql  assert_history_snapshot_timestamps_present.sql  assert_network_route_totals_reconcile.sql  assert_network_stop_totals_reconcile.sql  assert_no_missing_update_as_cancellation.sql  assert_otp_percentages_valid.sql  assert_realtime_coverage_reconciles.sql  assert_reliability_percentages_valid.sql  assert_route_type_route_totals_reconcile.sql  (+1 more)
deploy/: Caddyfile  production.compose.yml
docker/: entrypoint.sh
docs/: airflow.md  api.md  backup_recovery.md  data_quality.md  data_source.md  dbt.md  deployment.md  final_demo_guide.md  great_expectations.md  historical_collection.md  incidents.md  interview_questions.md  kpi_definitions.md  observability.md  phase_1_decision.md  portfolio_case_study.md  project_summary.md  quality_contracts.md  realtime_exploration.md  realtime_snapshot_kpis.md  runbook.md  security.md  serving_layer.md  settings.md  slo.md  static_mvp_explanation.md  teacher_presentation_notes.md
grafana/: mobility-control-tower-dashboard.json
great_expectations/: great_expectations.yml
scripts/: assert_incident_idempotency.py  assert_incremental_idempotency.py  backup.py  benchmark.py  bootstrap_demo.py  browser_smoke.py  capture_screenshots.py  collect_stack_evidence.py  compare_reliability_outputs.py  create_deterministic_fixture.py  doctor.py  export_reliability_outputs.py  failure_injection.py  lineage_smoke.py  restore.py  run_full_demo.sh  run_phase_2_demo.sh  security_check.py  seed_demo_incidents.py  smoke_test_reliability_views.py  smoke_test_stack.sh  validate_grafana_metrics.py  verify_airflow_runtime.py  verify_grafana_runtime.py  verify_postgres_restore.py  verify_production_overlay.py  verify_prometheus_runtime.py  verify_restore.py  verify_runtime_evidence.py  wait_for_stack.sh
tests/: test_airflow_dags.py  test_analytics_engineering.py  test_api.py  test_cli_dashboard_coverage.py  test_final_demo.py  test_final_evolution.py  test_gtfs_kpis.py  test_gtfs_pipeline.py  test_gtfs_profile.py  test_gtfs_realtime.py  test_gtfs_rt_gold.py  test_historical_realtime.py  test_incident_engine.py  test_incident_repository_postgres.py  test_phase2_operations.py  test_phase3_operator_intelligence.py  test_production_infra.py  test_raw_metadata.py  test_serving_layer.py
(+126 files in other folders)
