[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobility-control-tower"
version = "0.1.0"
description = "Local public transport data engineering platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0,<2",
  "fastapi>=0.115,<1",
  "gtfs-realtime-bindings>=1.0,<2",
  "matplotlib>=3.8,<4",
  "pandas>=2.0,<3",
  "PyYAML>=6.0,<7",
  "requests>=2.31,<3",
  "streamlit>=1.40,<2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
mobility-control-tower = "mobility_control_tower.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
