[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobility-control-tower"
version = "0.1.0"
description = "Local public transport data engineering platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "APScheduler>=3.10,<4",
  "boto3>=1.34,<2",
  "duckdb>=1.0,<2",
  "fastapi>=0.115,<1",
  "gtfs-realtime-bindings>=1.0,<2",
  "matplotlib>=3.8,<4",
  "pandas>=2.0,<3",
  "pyarrow>=15,<22",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1,<2",
  "prometheus-client>=0.20,<1",
  "PyYAML>=6.0,<7",
  "requests>=2.31,<3",
  "streamlit>=1.40,<2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "coverage[toml]>=7,<8"]
orchestration = ["apache-airflow>=2,<3"]
analytics = ["dbt-core>=1.7,<2", "dbt-duckdb>=1.7,<2", "great-expectations>=0.18,<2"]
quality = ["ruff>=0.6,<1", "black>=24,<25", "isort>=5,<6", "mypy>=1,<2", "pre-commit>=3,<4", "types-PyYAML", "types-requests"]

[project.scripts]
mobility-control-tower = "mobility_control_tower.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 160
target-version = ["py310"]
extend-exclude = '''
(
  ^/data/
  | ^/airflow/logs/
  | ^/dbt/target/
  | ^/great_expectations/validation_results/
)
'''

[tool.isort]
profile = "black"
line_length = 160
skip_glob = ["data/*", "dbt/target/*", "airflow/logs/*", "great_expectations/validation_results/*"]

[tool.ruff]
line-length = 160
target-version = "py310"
extend-exclude = ["data", "dbt/target", "airflow/logs", "great_expectations/validation_results", "htmlcov"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = false
exclude = "^(data|dbt/target|airflow/logs|great_expectations/validation_results|htmlcov)/"

[tool.coverage.run]
branch = true
source = ["src/mobility_control_tower"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
